Fix width overflow

--- a/styles/sass/ui/page-head.scss
+++ b/styles/sass/ui/page-head.scss
@@ -12,8 +12,8 @@
 
     @include grid-media-query("palm") {
         position: relative;
-        margin-bottom: 0;
-        padding: .5em 1em;
+        margin: 0;
+        padding: .5em 0;
         overflow: hidden;
 
         max-height: 1em;
